profile: editor: Add setting whether to preserve the working directory

Add a setting to control whether newly opened terminals open in the
working directory of the parent terminal. By default, the working
directory is only preserved when the command is a shell (as per /etc/shells).

https://bugzilla.gnome.org/show_bug.cgi?id=706927
https://gitlab.gnome.org/GNOME/gnome-terminal/issues/126